# gpicann

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  PKGBUILD  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gpicann.desktop
.github/workflows/: ccpp.yml
icons/: Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  gpicann.pot  ja.gmo  ja.po
src/: Makefile  Makefile.am  Makefile.in  arrow.c  common.h  genicontable.sh  gentcos.c  handle.c  handle.h  icons.c  main.c  mask.c  rect.c  settings.c  settings.h  shapes.h  state_mgmt.c  state_mgmt.h  tcos.c  tcos.h  text.c
